add library logic

--- a/template/index.html
+++ b/template/index.html
@@ -153,5 +153,14 @@
 
  <input type='submit'></input>
  </form>
+
+ 
+  <form action='/Server/library/qs'  method="POST" name="form6"> 
+Query_content<input name='q' type='text'></input>
+  page<input name='page' type='text'></input>
+  
+
+ <input type='submit'></input>
+ </form>
   </body>
   </html>
